--- a/css/styles.css
+++ b/css/styles.css
@@ -1283,6 +1283,10 @@ progress {
     flex: 0 0 auto;
     width: 33.33333333%;
   }
+  .col-lg-4a {
+    flex: 0 0 auto;
+    width: 100%;
+  }
   .col-lg-5 {
     flex: 0 0 auto;
     width: 41.66666667%;
@@ -10947,11 +10951,13 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/header-bg.jpg");
+   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+                  url("../assets/img/classroom.jpeg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
+  
 }
 header.masthead .masthead-subheading {
   font-size: 1.5rem;
@@ -10967,14 +10973,13 @@ header.masthead .masthead-heading {
   margin-bottom: 2rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
-
 @media (min-width: 768px) {
   header.masthead {
     padding-top: 17rem;
     padding-bottom: 12.5rem;
   }
   header.masthead .masthead-subheading {
-    font-size: 2.25rem;
+    font-size: 1.60rem;
     font-style: italic;
     line-height: 2.25rem;
     margin-bottom: 2rem;
